# plapok

./: .gitignore  README.md  mise.toml  spacetime.json
.github/workflows/: deploy.yml
docs/: TODO.md
spacetimedb/: Cargo.toml
spacetimedb/src/: countries.rs  lib.rs  model.rs  tweaks.rs  use_cases.rs
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/public/: site.webmanifest
web/src/: App.tsx  config.ts  routes.tsx
web/src/app/: AppShell.tsx  layout.tsx  page.tsx
web/src/common/: feedback.ts  index.ts  profile.ts  roles.ts  room.ts  timestamp.ts
web/src/components/: MainView.tsx  RitualView.tsx  avatar.tsx  cardSelection.tsx  content.ttsx  currentVoting.tsx  feedbackModal.tsx  profileCreation.tsx  profileIcon.tsx  revealCardsSection.tsx  revealedVote.tsx  roomSettingsModal.tsx  roomSharingModal.tsx  sidebarRoom.tsx  theme-switch.tsx  topicArea.tsx  wholeRoom.tsx
web/src/hooks/: useAvatar.ts  useConnectionRoom.ts  useLocalStorage.ts  useProfile.ts
web/src/layouts/: default.tsx  global.tsx
web/src/module_bindings/: index.ts  types.ts  user_active_session_table.ts
web/src/pages/: home.tsx  index.tsx  layout.tsx  newRoom.tsx  profileGuard.tsx  provider.tsx  room.tsx
web/src/providers/: index.tsx  spacetimedb.tsx
web/src/spacetimedb_bindings/: create_profile_reducer.ts  index.ts  my_participating_rooms_table.ts  my_profile_table.ts  profile_set_avatar_reducer.ts  profile_set_name_avatar_reducer.ts  set_participant_role_reducer.ts  set_room_deck_reducer.ts  set_room_topic_reducer.ts  types.ts  (+1 more)
(+5 files in other folders)
